--- a/Parcial1-Ap2-Nuñez/Pages/R_Producto.razor
+++ b/Parcial1-Ap2-Nuñez/Pages/R_Producto.razor
@@ -41,7 +41,7 @@
                 </div>
                 <div class="form-group">
                     <label>Valor Inventario</label>
-                    <InputNumber @bind-Value="producto.ValorInventario"  @oninput="ValorInventario" ReadOnly="true" class="form-control"/>
+                    <InputNumber @bind-Value="producto.ValorInventario"  @oninput="ValorInventario" @onfocus="ValorInventario" @onfocusout="ValorInventario" ReadOnly="true" class="form-control"/>
                     <ValidationMessage For="@(()=>producto.ValorInventario)"></ValidationMessage>
                 </div>
             </form>
