--- a/Parcial1-Ap2-Nuñez/Shared/NavMenu.razor
+++ b/Parcial1-Ap2-Nuñez/Shared/NavMenu.razor
@@ -13,13 +13,13 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/Productos">
+            <NavLink class="nav-link" href="/Producto">
                 <span class="oi oi-plus" aria-hidden="true"></span> Registro Productos
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="/ConsultaProductos">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Productos
             </NavLink>
         </li>
     </ul>
