Agregue mas requerimientos a la entidad Producto y agregue un <h2> a la tabla consulta

--- a/Parcial1-Ap2-Nuñez/Pages/ConsultaProducto.razor
+++ b/Parcial1-Ap2-Nuñez/Pages/ConsultaProducto.razor
@@ -1,11 +1,11 @@
 ﻿@page "/ConsultaProductos";
 @using Parcial1_Ap2_Nuñez.BLL;
 @using Parcial1_Ap2_Nuñez.Models;
-
+<h2 >Consulta Productos</h2>
     <table class="table">
         
         <thead>
-
+            
             <tr>
                 <th>Id</th>
                 <th>Descripcion</th>
